Fixed footer with collapsing header

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,13 +12,17 @@
  *= require_tree .
  */
 
-$header_width: 320px;
+$header_width: 300px;
 $header_height: 175px;
-$logo_img_width: 310px;
+
+$footer_width: $header_height;
+$footer_height: 47px;
+
+$logo_img_width: 300px;
 $logo_img_height: 150px;
 
 $scene_body_margin_x: 20px;
-$scene_body_margin_y: 91px;
+$scene_body_margin_y: 64px+$footer_height;
 
 @font-face{
 	font-family: 'CrimsonText';
@@ -233,8 +237,11 @@ table{
 }
 
 #footer{
-	height: 27px;
+	bottom: 0px;
+	height: #{$footer_height};
 	padding: 3px 0px 0px 0px;
+	position: absolute;
+	width: 100%;
 	a{
 		color: #808080;
 		font-size: 13px;
@@ -263,7 +270,7 @@ table{
 			color: #ffffff;
 			font-family: 'LeagueGothic';
 			font-size: 120px;
-			margin: 58px 0px 0px #{$logo_img_width +10};
+			margin: 58px 0px 0px #{$logo_img_width +20};
 		}
 	}
 	.links{
@@ -300,7 +307,9 @@ table{
 #scene{
 	background-color: #ffffff;
 	color: #000000;
-	overflow: scroll;
+	min-height: calc(100% -#{$header_height});
+	min-height: -moz-calc(100% - #{$header_height});
+	min-height: -webkit-calc(100% - #{$header_height});
 	position: relative;
 	text-align: center;
 	top: #{$header_height};
@@ -310,9 +319,7 @@ table{
 		display: inline-block;
 		margin: 30px 0px 30px 0px;
 		max-width: 960px;
-		min-height: calc(100% - #{$scene_body_margin_y});
-		min-height: -moz-calc(100% - #{$scene_body_margin_y});
-		min-height: -webkit-calc(100% - #{$scene_body_margin_y});
+		overflow: visible;
 		width: calc(100% - #{$scene_body_margin_x});
 		width: -moz-calc(100% - #{$scene_body_margin_x});
 		width: -webkit-calc(100% - #{$scene_body_margin_x});
@@ -326,7 +333,7 @@ table{
 	right: 0px;
 	margin: 0px 10px 0px 10px;
 	position: fixed;
-	z-index: 2;
+	z-index: 10;
 	img{
 		height: 20px;
 		width: 20px;
