--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -162,7 +162,7 @@
 }
 
 .navigation{
-	height: 70px;
+	height: 110px;
 	a{
 		margin: 0px 25px 0px 0px;
 	}
